[workspace]
members = [
    "tests",
    "types",
    "lib/eth-bridge-typescript-lib",
    "lib/eth-light-client-lockscript-lib",
    "lib/eth-recipient-typescript-lib",
]

exclude = [
    "contracts/eth-bridge-typescript",
    "contracts/eth-light-client-lockscript",
    "contracts/eth-light-client-typescript",
    "contracts/eth-bridge-lockscript",
    "contracts/eth-recipient-typescript",
]
