[workspace]

members = [
    "types",
    "eth-spv-lib",
    "contracts-helper",
    "lib/eth-bridge-lockscript-lib",
    "lib/eth-bridge-typescript-lib",
    "lib/eth-light-client-typescript-lib",
    "lib/eth-recipient-typescript-lib",
    "lib/simple-eth-bridge-typescript-lib"
]

exclude = [
    "contracts/eth-bridge-lockscript",
    "contracts/eth-bridge-typescript",
    "contracts/eth-light-client-typescript",
    "contracts/eth-recipient-typescript",
    "contracts/simple-eth-bridge-typescript"
]
