[package]
name = "eth-spv-lib"
version = "0.1.0"
authors = ["Leon <matrix.skygirl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = {version = "0.4.5", default-features = false }
rlp-derive = "0.1.0"
ethereum-types = {version = "0.9.2", default-features = false }
derive_more = "^0.99.11"
sha3 = {version = "0.9.1", default-features = false }
sha2 = {version = "0.9.3", default-features = false }

