[package]
name = "ethash"
description = "An Apache-licensed Ethash implementation."
version = "0.4.0"
authors = ["Wei Tang <hi@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
ethereum-types = { version = "0.9.2", default-features = false }
# primitive-types = { version = "0.6", default-features = false, features = ["rlp"] }
primitive-types = { version = "0.7.2", default-features = false }
rlp = { version = "0.4", default-features = false }
byteorder = { version = "1", default-features = false }
sha3 = { version = "0.8", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"

[features]
default = ["std"]
std = [
  "ethereum-types/std",
  "rlp/std",
  "byteorder/std",
  "sha3/std",
]