[package]
name = "force-eth-types"
version = "0.1.0"
authors = ["jacobdenver007 <jacobdenver@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["molecule/std", "no-std-compat/std"]
contract = []

[dependencies]
molecule = { version = "0.6", default-features = false }
ethereum-types = {version = "0.9.2", default-features = false }
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
eth-spv-lib = { git = "https://github.com/LeonLi000/eth-spv-lib.git" }

[dev-dependencies]
ethabi = "12.0.0"
hex = "0.4"
rlp = {version = "0.4.5", default-features = false }
