[package]
name = "force-eth-cli"
version = "0.1.0"
authors = ["LeonLi000 <matrix.skygirl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
force-eth-lib = { path = "../lib" }
clap = "3.0.0-beta.1"
int-enum = "0.4"
anyhow = "1.0"
log = "0.4"
web3 = "0.13.0"
ethabi = "12.0.0"
hex = "0.4"
env_logger = "0.7.1"
rusty-receipt-proof-maker = { git = "https://github.com/LeonLi000/ethereum-receipt-proof-maker.git", rev = "510f8e1fb4d0b9fe4dc8d51e3519df65d9a9c5aa" }
tokio = { version = "0.2.9", features = ["full"]}
molecule = "0.6"
