[package]
name = "force-eth-cli"
version = "0.1.0"
authors = ["LeonLi000 <matrix.skygirl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
force-eth-lib = { path = "../lib" }
clap = "3.0.0-beta.1"
int-enum = "0.4"
anyhow = "1.0"
log = "0.4"
web3 = "0.13.0"
ethabi = "12.0.0"
hex = "0.4"
env_logger = "0.7.1"
rusty-receipt-proof-maker = { git = "https://github.com/LeonLi000/ethereum-receipt-proof-maker.git", rev = "03b10ca" }
tokio = { version = "0.2.9", features = ["full"]}
molecule = "0.6"
serde = "1.0"
serde_json = "1.0"
rlp = {version = "0.4.5", default-features = false }
cmd_lib = "0.8.5"
