[package]
name = "force-eth-lib"
version = "0.1.0"
authors = ["LeonLi000 <matrix.skygirl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
force-sdk = { path = "../sdk" }
anyhow = "1.0"
ethereum-types = {version = "0.9.2" }
web3 = "0.13.0"
rlp = {version = "0.4.5", default-features = false }
futures = "0.3.4"
hex = "0.4"
secp256k1 = "0.17.0"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli", tag = "v0.36.0" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
config = "0.10"
toml = "0.5"
ethereum-tx-sign = "3.0.3"
ethabi = "12.0.0"
tokio = { version = "0.2.9", features = ["full"]}
rusty-receipt-proof-maker = { git = "https://github.com/LeonLi000/ethereum-receipt-proof-maker.git", rev = "b73286f" }
faster-hex = "0.4"
eth-spv-lib = { path = "../../ckb-contracts/eth-spv-lib", default-features = false }
cmd_lib = "0.8.5"
force-eth-types = { path = "../../ckb-contracts/types" }
tiny-keccak = "2.0.2"
molecule = { version = "0.6", default-features = false }
shellexpand = "2.0.0"
actix-web = "3"
derive_more = "0.99"
actix-cors = "0.5"
sqlx = { version = "0.4.0", features = [ "mysql", "runtime-actix-native-tls" ] }
rand = "0.7.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rocksdb = { package = "ckb-rocksdb", version = "0.14.1", features = ["snappy"] }
sparse-merkle-tree = { version = "0.3.1-pre", default-features = false }
merkle-cbt = "0.2.2"
