[package]
name = "force-sdk"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
int-enum = "0.4"
toml = "0.5"
config = "0.10"
hex = "0.4"
anyhow = "1.0"
molecule = "0.6"
secp256k1 = "0.17.0"
reqwest = "^0.9"
log = "0.4"
failure = "0.1.5"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli", tag = "v0.36.0" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2", features = ["secp"] }
jsonrpc-core = "14.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.9", features = ["full"]}

[dev-dependencies]
env_logger = "0.7.1"
