[package]
name = "sign-server"
version = "0.1.0"
authors = ["LeonLi000 <matrix.skygirl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "15.0"
anyhow = "1.0"
secp256k1 = "0.17.0"
hex = "0.4"
web3 = "0.13.0"

