[package]
name = "sign-server"
version = "0.1.0"
authors = ["LeonLi000 <matrix.skygirl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "15.0"
clap = "3.0.0-beta.1"
anyhow = "1.0"
secp256k1 = "0.17.0"
hex = "0.4"
web3 = "0.13.0"
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli", tag = "v0.36.0" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
force-eth-types = { path = "../../ckb-contracts/types" }
serde_json = "1.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
log = "0.4"
env_logger = "0.7.1"
cmd_lib = "0.8.5"
tokio = { version = "0.2.9", features = ["full"]}
config = "0.10"
toml = "0.5"
shellexpand = "2.0.0"
rocksdb = { package = "ckb-rocksdb", version = "0.14.1", features = ["snappy"] }
sparse-merkle-tree = { version = "0.3.1-pre", default-features = false }
merkle-cbt = "0.2.2"
force-sdk = { path = "../sdk" }
futures = "0.3.4"
