[package]
name = "eth-bridge-typescript"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-bridge-typescript-lib = { path = "../../lib/eth-bridge-typescript-lib", default_features = false }
ckb-std = { path = "../../lib/ckb-std" }
