[package]
name = "eth-light-client-typescript"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "b56b362" }
eth-light-client-typescript-lib = { path = "../../lib/eth-light-client-typescript-lib", default_features = false }

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
