[package]
name = "eth-bridge-typescript"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-recipient-typescript-lib = { path = "../../lib/eth-recipient-typescript-lib", default_features = false }
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "b56b362" }

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
