[package]
name = "eth-bridge-lockscript-lib"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["mockall", "no-std-compat/std"]

[dependencies]
cfg-if = "0.1"
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "b56b362" }
mockall = { version = "0.8", optional = true }
molecule = { version = "0.6", default-features = false }
force-eth-types = { path = "../../types", default-features = false, features = ["contract"]}
eth-spv-lib = { git = "https://github.com/LeonLi000/eth-spv-lib.git" }
hex = { version = "0.4", default-features = false }
rlp = {version = "0.4.5", default-features = false }
ethereum-types = {version = "0.9.2", default-features = false }
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
