[package]
name = "eth-bridge-typescript-lib"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["mockall"]
#std = ["molecule/std", "int-enum/std", "ckb-server"]

[dependencies]
#molecule = { version = "0.6", default-features = false }
#int-enum = { version = "0.4", default-features = false }
cfg-if = "0.1"
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "b56b362" }
mockall = { version = "0.8", optional = true }
