[package]
name = "eth-light-client-lockscript-lib"
version = "0.1.0"
authors = ["jacobdenver007 <jacobdenver@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["mockall"]

[dependencies]
cfg-if = "0.1"
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "b56b362" }
mockall = { version = "0.8", optional = true }
molecule = { version = "0.6", default-features = false }
