[package]
name = "eth-recipient-typescript-lib"
version = "0.1.0"
authors = ["jacobdenver007 <jacobdenver@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["mockall"]

[dependencies]
cfg-if = "0.1"
ckb-std = "0.6"
mockall = { version = "0.8", optional = true }
force-eth-types = { path = "../../types", default-features = false, features = ["contract"] }
molecule = { version = "0.6", default-features = false }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
