[package]
name = "eth-recipient-typescript-lib"
version = "0.1.0"
authors = ["jacobdenver007 <jacobdenver@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["mockall"]

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "b56b362" }
mockall = { version = "0.8", optional = true }
force-eth-types = { path = "../../types", default-features = false, features = ["contract", "devnet"] }
molecule = { version = "0.6", default-features = false }
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
blake2b-ref = "0.1.0"
contracts-helper = { path = "../../contracts-helper", default-features = false }
