[package]
name = "contract"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { path = "../.." }
blake2b-ref = { version = "0.1", default-features = false }

[build-dependencies]
blake2b-rs = "0.1.5"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
